# ift630_fini

devoir1/barb/mon/: Barb.jr  BarbMon.m
devoir1/barb/msg/: BarbMsg.jr
devoir1/barb/sem/: BarbierSem.jr
devoir1/mat/msg/: MatriceMsg.jr
devoir1/parc/mon/: Parc.jr  ParcMon.m
devoir1/parc/sem/: ParcSem.jr
devoir1/philo/mon/: Philo.jr  PhiloMon.m
devoir1/philo/msg/: PhiloMsg.jr  Server.jr
devoir1/philo/sem/: PhilosopheSem.jr
devoir2/: laplace.cpp  matrice  matrice.c  mono-para.cpp  rapport_devoir2.tex
devoir2/opencl/: ift630-opencl.sln
devoir2/opencl/ift630-opencl/: ift630-opencl.cpp  ift630-opencl.vcxproj  ift630-opencl.vcxproj.filters  password  utils.h
devoir3/: CMakeLists.txt  build.sh  petit_fichier
devoir3/src/: client.cpp  server.cpp  utils.h
projet_ift630/: build.gradle  settings.gradle
projet_ift630/gradle/wrapper/: gradle-wrapper.properties
projet_ift630/src/main/java/: CClient.java  CClientRunner.java  CServer.java  CServerRunner.java  ClientApp.java  SClient.java  Utilities.java
projet_ift630/src/test/java/: TestUtilities.java
serveur/: build.gradle
serveur/gradle/wrapper/: gradle-wrapper.properties
serveur/src/main/java/: ClientSendInformation.java  ListFile.java  NullCommand.java  Server.java  ServerCommand.java  ServerRunner.java
serveur/src/test/java/: ListFileTest.java  ServerTest.java
